syntax = "proto3";

package fractionalNonFungible;

import "tokens.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "TTI.TTF.Base";
option java_package = "org.tti.ttf.base";
option java_multiple_files = true;
